<resources>
    <string name="app_name">Nnamdi\'s_Android_Lab1</string>
    <string name="hello_message">Hello world!</string>
    <string name="button_message">I\'m a button</string>
    <string name="editmessage">I\'m an EditText</string>
    <string name="hinttext">Write something here</string>
    <string name="checkbox">Do you drink coffee</string>
    <string name="switch1">Do you drink coffee</string>
    <string name="radiobutton">Do you drink coffee</string>
</resources>